sdk/python/lib/test/automation/errors/compilation_error/typescript/index.ts
import * as codeinfra from "@codeinfra/codeinfra";

will not compile
